<resources>
    <string name="app_name">SDIJ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_todolist">To Do List</string>
    <string name="menu_stopwatch">Stopwatch</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_teachers">Teachers</string>
    <string name="menu_curriculum">Curriculum</string>
    <string name="menu_map">Map</string>
</resources>